Fix wrapping of social buttons on small screens

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -67,6 +67,10 @@ a {
 #store-banners {
   text-align: center;
 
+  a {
+    padding: 0px 4px 0px 0px;
+  }
+
   img {
     width: 120px;
   }
